--- a/packages/ui/src/index.html
+++ b/packages/ui/src/index.html
@@ -5,6 +5,7 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="./extern/favicon.ico" />
     <title>Tofa</title>
     <style type="text/css">
         .cllf {
