--- a/packages/ui/src/index.html
+++ b/packages/ui/src/index.html
@@ -334,6 +334,7 @@
             Loading...
         </div>
     </div>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </body>
 
 </html>
